<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@drawable/background1">
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:stretchColumns="1">
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/t_name" 
			android:textSize="14px"/>
		<EditText 
			android:id="@+id/nameView02" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:textSize="14px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/t_gender" 
			android:textSize="14px"></TextView>
		<RadioGroup
			android:id="@+id/genderGroup01"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<RadioButton
			android:id="@+id/genderButton01"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/man"
			/>
			<RadioButton
			android:id="@+id/genderButton02"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/female"
			/></RadioGroup>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="14px" 
			android:text="@string/t_title"></TextView>
		<EditText  
			android:id="@+id/titleView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="14px" 
			android:text="@string/t_college"></TextView>
		<EditText 
			android:id="@+id/collegeView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="14px" 
			android:text="@string/t_phone"></TextView>
		<EditText 
			android:id="@+id/phoneView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/t_office" 
			android:textSize="14px"></TextView>
		<EditText 
			android:id="@+id/officeView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="14px" 
			android:text="@string/t_email"></TextView>
		<EditText 
			android:id="@+id/emailView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="14px" 
			android:text="@string/t_officetime"></TextView>
		<EditText 
			android:id="@+id/timeView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>	
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="14px" 
			android:text="@string/t_ftp"></TextView>
		<EditText 
			android:id="@+id/ftpView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="14px"/>
	</TableRow>
	</TableLayout>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<Button 
			android:id="@+id/EditButton" 
			android:layout_height="wrap_content" 
			android:text="@string/update_teacher" 
			android:textSize="14px" 
			android:gravity="center"
			android:layout_width="wrap_content"></Button>
		<Button 
			android:id="@+id/DeleteButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/delete_teacher" 
			android:textSize="14px" 
			android:gravity="center"
			></Button>
		<Button 
			android:id="@+id/cancelButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/cancel" 
			android:textSize="14px" 
			android:gravity="center"
			></Button>
	</TableRow>
</LinearLayout>