<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@drawable/background1">
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:stretchColumns="1">
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/t_name" 
			android:textSize="16px"
			android:padding="3dip"></TextView>
		<EditText 
			android:id="@+id/EditText01" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:padding="3dip"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/t_gender" 
			android:textSize="16px"></TextView>
		<RadioGroup
			android:id="@+id/RadioGroup01"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<RadioButton
			android:id="@+id/RadioButton1"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/man"
			/>
			<RadioButton
			android:id="@+id/RadioButton2"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/female"
			/></RadioGroup>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/t_title"></TextView>
		<EditText 
			android:id="@+id/EditText03" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/t_college"></TextView>
		<EditText 
			android:id="@+id/EditText04" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/t_phone"></TextView>
		<EditText 
			android:id="@+id/EditText05" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			></EditText>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/t_office" 
			android:textSize="16px"></TextView>
		<EditText 
			android:id="@+id/EditText06" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/t_email"></TextView>
		<EditText 
			android:id="@+id/EditText07" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/t_officetime"></TextView>
		<EditText 
			android:id="@+id/EditText08" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>	
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/t_ftp"></TextView>
		<EditText 
			android:id="@+id/EditText09" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>
	</TableLayout>
	
		<Button 
			android:id="@+id/Button01" 
			android:layout_height="wrap_content" 
			android:text="@string/add_teacher" 
			android:textSize="16px" 
			android:layout_alignParentLeft="true"
			android:layout_alignParentBottom="true"
			android:layout_width="wrap_content"></Button>
		<Button 
			android:id="@+id/Button02" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/cancel" 
			android:textSize="16px" 
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true"
			></Button>
	
</RelativeLayout>