<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@drawable/background1">
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:stretchColumns="1">
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/a_name" 
			android:textSize="16px"/>
		<TextView 
			android:id="@+id/a_nameView02" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:textSize="16px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/a_info" 
			android:textSize="16px"></TextView>
		<TextView
			android:id="@+id/a_infoView02"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/a_course"></TextView>
		<TextView  
			android:id="@+id/a_courseView02" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:textSize="16px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/a_deadline"></TextView>
		<TextView 
			android:id="@+id/a_deadlineView02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="16px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/submitway"></TextView>
		<TextView  
			android:id="@+id/submitwayView" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:textSize="16px"/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/submitornot" 
			android:textSize="16px"></TextView>
		<RadioGroup
			android:id="@+id/submitGroupView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<RadioButton
			android:id="@+id/submitYView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/yes"
			/>
			<RadioButton
			android:id="@+id/submitNView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/no"
			/></RadioGroup>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="10px">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/priority"></TextView>
	</TableRow>
	</TableLayout>
	<Button 
		android:id="@+id/delete_assignmentButton" 
		android:layout_width="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:layout_height="wrap_content" 
		android:text="@string/delete_assignment" 
		android:textSize="16px" 
		></Button>
	<RatingBar 
		android:id="@+id/rb2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/delete_assignmentButton"
		android:layout_above="@id/delete_assignmentButton"
		android:paddingBottom="100px"
		android:numStars="4"
		/>
	
	<Button 
		android:id="@+id/cancelButton03" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/cancel" 
		android:textSize="16px" 
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		></Button>
	
</RelativeLayout>