<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@drawable/background1"
	>
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:stretchColumns="1">
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:gravity="center"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/a_name" 
			android:textSize="16px"
			android:padding="3dip"></TextView>
		<EditText 
			android:id="@+id/a_nameView01" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textSize="16px"
			/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/a_info" 
			android:textSize="16px"></TextView>
		<EditText 
			android:id="@+id/a_infoView01" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:textSize="16px"
			/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/a_course"></TextView>
		<Spinner
			android:id="@+id/Spinner1"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
			android:textSize="16px"/>
		
	</TableRow>
	<TableRow 
		android:id="@+id/TableRow01"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<DatePicker
			android:id="@+id/DatePicker01"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			></DatePicker>
		<TimePicker
			android:id="@+id/TimePicker01"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			></TimePicker>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/a_deadline"
			></TextView>
		<Button
			android:id="@+id/setDate01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="设置日期"
		/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"  
			android:visibility="invisible"
			></TextView>
		<Button
			android:id="@+id/setTime01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="设置时间"
		/>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/submitway"
			></TextView>
		<EditText 
			android:id="@+id/a_submit01" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"></EditText>
	</TableRow>
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView  
			android:id="@+id/submitView01"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px"
			android:text="@string/submitornot"></TextView>
		<RadioGroup
			android:id="@+id/RadioGroup02"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<RadioButton
			android:id="@+id/submitY"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/yes"
			/>
			<RadioButton
			android:id="@+id/submitN"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/no"
			/></RadioGroup>
	</TableRow>
	
	<TableRow 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:textSize="16px" 
			android:text="@string/priority"
		/>
		
	</TableRow>
	</TableLayout>
	<Button 
		android:id="@+id/addButton01"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:layout_height="wrap_content" 
		android:text="@string/add_assignment" 
		android:textSize="16px" 
		android:layout_width="wrap_content"
		></Button>
	<RatingBar 
			android:id="@+id/rb1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/addButton01"
			android:layout_above="@id/addButton01"
			android:paddingBottom="50px"
			android:numStars="4"
			android:rating="1"
		/>
	
	<Button 
		android:id="@+id/cancelButton01"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/cancel" 
		android:textSize="16px" 
		></Button>
</RelativeLayout>